classDiagram
  class Payment {
    <<abstract>>
    int id
    Euro amount
    Interval interval
    createdOn DateTime
    cancel()
    isPaymentComplete()  bool
    hasExternalProvider() bool
    getValuationDate() DateTime
  }
  Payment "1" *-- "1" Interval
  
  
  class Interval {
    <<enumeration>>
    ONE_TIME
    MONTHLY
    QUARTERLY
    BIANNUAL
    YEARLY
  }


  class DirectDebitPayment {
    Iban iban
    string? BIC

  }
  Payment <|-- DirectDebitPayment

  class BankTransferPayment {
    string transferCode
  }
  Payment <|-- BankTransferPayment

  class BookablePayment {
    <<interface>>
    bookPayment( TransactionDataInterface )
  }

  class CreditCardPayment {
    string transactionId
	  string transactionStatus
	  string transactionTimestamp
	  string authId
	  string sessionId
	  string customerId
	  string cardExpiry
	  string currencyCode
	  string countryCode
	
    bookPayment( CreditCardTransactionData )
  }
  Payment <|-- CreditCardPayment
  BookablePayment <|-- CreditCardPayment
  

  class PayPalPayment {
    string payerId
	  string subscriberId
	  string payerStatus
	  string paymentId
	  string paymentType
	  string paymentStatus
	  string paymentTimestamp
	  string firstPaymentDate
	  PayPal[] childPayments
    bookPayment( PayPalTransactionData )
  }
  Payment <|-- PayPalPayment
  BookablePayment <|-- PayPalPayment

  class SofortPayment {
    string transferCode
    DateTime bookedOn
    bookPayment( SofortPaymentTransactionData )
  }
  Payment <|-- SofortPayment
  BookablePayment <|-- SofortPayment

